--- a/resources/templates/admin/index.html
+++ b/resources/templates/admin/index.html
@@ -244,9 +244,9 @@
         <li><a href="/admin/userlist.html" class="menu-link" target="_blank"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg>
             员工管理
         </a></li>
-        <li><a href="/admin/command.html" class="menu-link" target="_blank"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17 1H7c-1.1 0-2 .9-2 2v18c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-2-2-2zm0 18H7V5h10v14z"/></svg>
-            员工考勤
-        </a></li>
+<!--        <li><a href="/admin/command.html" class="menu-link" target="_blank"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17 1H7c-1.1 0-2 .9-2 2v18c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-2-2-2zm0 18H7V5h10v14z"/></svg>-->
+<!--            员工考勤-->
+<!--        </a></li>-->
 
     </ul>
 </aside>
